# quick-automation-devtool

./: .commitlintrc  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  dt.yml  qad.yml  qad.yml.dist
assets/: bash_completion.sh  dt.sh  dt_bash_competion.sh  dt_bash_completion.sh
cicd/: Dockerfile  release.gitlab-ci.yml  test.gitlab-ci.yml
docs/: VERSION_1.md  qad.schema.json
examples/: qad-with-branching-strategy.yaml
src/: main.rs
src/app/domain/: error.rs  mod.rs
src/app/infra/: mod.rs
src/ci/: ci_config.rs  clean.rs  config.rs  mod.rs
src/ci/config/: mod.rs
src/ci/display/: ansi_control_sequence.rs  exhaustive.rs  full_final_display.rs  interactive.rs  interactive_display.rs  mod.rs  sequence.rs  sequence_display.rs  silent.rs  silent_display.rs  spinner.rs  summary.rs  summary_display.rs  term_wrapper.rs  tui.rs
src/ci/display/tui/: mod.rs  stateful_list.rs  stateful_text.rs
src/ci/job/: constraint_matrix.rs  container_configuration.rs  dag.rs  docker.rs  docker_job.rs  env_bag.rs  env_parser.rs  inspection.rs  instruction_interpreter.rs  instruction_parser.rs  job_output.rs  job_scheduler.rs  mod.rs  ports.rs  schedule.rs  shell_interpreter.rs  simple.rs  simple_job.rs  state.rs  tests.rs
src/ci/job/dag/: constraint_matrix.rs  constraint_matrix_constraint_iterator.rs
src/ci/logic/: display.rs  job.rs  mod.rs
src/ci/schedule/: mod.rs
src/config/: argh.rs  migrate.rs  mod.rs  toml_parser.rs  version_0x.rs  version_0y.rs  wrapped_content.rs  yaml_parser.rs
src/config/instructions/: mod.rs  whitespaces.rs
src/config/serialization/: toml_parser.rs
src/config/versions/: mod.rs  version_0x.rs  version_0y.rs  version_1.rs
tools/: bash-unit-tests.sh  changelog  pre-commit
tools/lib/: bash-completion-unit-framework.sh
