[package]
name = "qad"
version = "1.4.1"
edition = "2021"
description = """
Quick Automation Devtool (qad) is your companion for doing more, quicker,
on your local machine. It launches your CI locally with blazing fast parallel
jobs, keeping you informed with a responsive terminal UI.
"""
authors = ["Pierre-Antoine Guillaume <pierreantoine.guillaume@gmail.com>"]
license = "MIT"
documentation = "https://gitlab.com/pag-station/quick-automation-devtool"
homepage = "https://gitlab.com/pag-station/quick-automation-devtool"
repository = "https://gitlab.com/pag-station/quick-automation-devtool"

[dependencies]
anyhow = "1.0.56"
argh = "0.1.4"
atty = "0.2.11"
crossterm = "0.25"
indexmap = "1.8.0"
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.4"
terminal_size = "0.2.1"
tui = "0.19"

[package.metadata.deb]
section = "devel"
assets = [
  ["target/release/qad", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/qad/", "644"],
  ["README.md", "usr/share/doc/qad/README", "644"],
  ["/tmp/qad.bash", "usr/share/bash-completion/completions/qad", "644"],
]
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/qad", dest = "/usr/bin/qad", mode = "755" },
  { source = "LICENSE", dest = "/usr/share/doc/qad/LICENSE", mode = "644", doc = true },
  { source = "README.md", dest = "/usr/share/doc/qad/README.md", mode = "644", doc = true },
  { source = "/tmp/qad.bash", dest = "/usr/share/bash-completion/completions/qad", mode = "644" },
]
